--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="../src/image/favicon.png" />
 	<title>Chat</title>
 </head>
 
 <body>
 	<main id="root"></main>
-	<script type="module" src="index.js"></script>
+	<script type="module" src="index.ts"></script>
 </body>
 
-</html>
+</html> 
